			autorevision history

Repository head:
  Try to make tarballs more reproducible.
  Add an option to silence warnings.
  Add a sed script output.
  Auto generate the logo with update commit info.
  Note if the tag (in git) is not annotated.

1.20 @ 2017-01-03:
  Better determinism in the order of the author file.
  Better tests for `local` support.
  Make sure the cache file is not polluted from other output types.

1.19 @ 2016-12-20:
  Only use the committer date for git.
  Only use the `local` keyword where supported.

1.18 @ 2016-11-22:
  Fix some bashisms in the make file.
  Get the short hash from git rather than assuming its length.

1.17 @ 2016-11-18:
  Fix out of repo operation.
  Bring back the irc channel.
  Add a script to sanity check out of repo operation.

1.16 @ 2016-11-15:
  Try to eliminate stray error output.
  Allow the VCS_EXTRA symbol to be renamed.
  Add an C# output.
  Add an CMake output.

1.15 @ 2016-08-08:
  Add support for action stamps.
  Add support for plain c/c++ source output.
  Activate mq as needed for hg.
  Add an .editorconfig file.

1.14 @ 2016-02-22:
  Fix PHP output.
  Use constants array in PHP output.
  Make sure that the cache file gets outputted where expected.
  Add an example for use with waf.

1.13 @ 2015-07-31:
  Make the man page more reproducible.
  Make sure VCS_WS_MODIFIED is not empty for svn.
  Remove sql output until such time as it can be completed.
  Add some missing example files.

1.12 @ 2015-03-16
  Use --xml for svn when we care about the output.
  New site: https://autorevision.github.io/
  Handle older svn detection more gracefully.

1.11 @ 2015-02-20
  Added scheme, clojure, rpm, and sql outputs.
  Added hpp, matlab, and octave outputs.
  Reorder types in help and asciidoc to be more alphabetical.
  Try using md5sum when md5 is not available when making tarballs.
  Fix a typo in the svn driver.

1.10a @ 2014-10-24
  Emergency bug fix.

1.10 @ 2014-10-23
  Cover the case of split repository heads.