@@ -6,6 +6,7 @@ Repository head:
   Add a sed script output.
   Auto generate the logo with update commit info.
   Note if the tag (in git) is not annotated.
+  Extract info about OpenPGP keys used to sign tags/commits.
 
 1.20 @ 2017-01-03:
   Better determinism in the order of the author file.
